# pyhh

./: .gitignore  .pre-commit-config.yaml  Analysis.py  BkgEstimate.py  Configuration.py  Fitting.py  HistDefs.py  HistFill.sh  HistFill.sub  HistFillConfig.txt  HistFillFile.sub  HistFiller.py  HistFillerTools.py  Histograms.py  Loader.py  Merger.py  Plotter.py  PlottingTools.py  README.md  makeHistSub.py  makeSubmitFile.py  metaData.json  pyproject.toml  requirements.txt
Plotting/: Plotter.py  colors.py  loadHists.py  tools.py  utils.py
batch/: HistFill.sub  HistFillConfig.txt  HistFillFile.sh  HistFillFile.sub  makeHistSub.py
pyhh/: main.py
pyhh/fitter/: fitting.py  main.py
pyhh/histfiller/: analysis.py  configuration.py  histdefs.py  main.py  metadata.py  tools.py
pyhh/plotter/: loadHists.py  main.py
pyhh/scripts/: bkg_estimate.py  histfill.sh  histfill_config.txt  make_histfill_sub.py  make_rucio_sub.py  merge_all.sh  rucio_download_config.txt  submit_all.sh
pyhh/selector/: README.md  analysis.py  configuration.py  helpers.py  histdefs.py  main.py  metadata.json  metadata.py  tools.py
pyhh/tools/: get_hist_keys.py  merger.py
scripts/: BkgEstimate.py  HistFill.sh  HistFillConfig.txt  getHistKeys.py  getHistNames.py  histKeys.py  makeRucioSub.py  makeSubmitFile.py  mergeAll.sh  rucioDownload.sh  rucioDownloadConfig.txt  rucioDownloader.sub  submitAll.sh
tools/: HistFill.sh  HistFill.sub  HistFillConfig.txt  HistFillerTools.py  Histograms.py  Merger.py  MetaData.py  PlottingTools.py  logging.py  makeHistSub.py  mergeAll.sh  metaData.json  submitAll.sh
