[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyhh"
version = "0.1"
requires-python = ">=3.7"
dependencies = [
    "vector",
    "uproot",
    "numpy",
    "matplotlib",
    "h5py",
    "mplhep",
    "pyhf",
    "tqdm",
    "pdf2image",
    "coloredlogs",
]

[tool.setuptools.packages.find]
where = ["."]


[project.scripts]
pyhh = "pyhh.main:main"
